--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@types/styled-components": "^5.1.2",
+    "@unform/core": "^2.1.3",
+    "@unform/web": "^2.1.3",
     "next": "9.5.1",
     "next-images": "^1.4.1",
     "react": "16.13.1",
@@ -20,6 +22,7 @@
     "@types/react": "^16.9.44",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
     "@typescript-eslint/parser": "^2.28.0",
+    "babel-plugin-styled-components": "^1.11.1",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.10.1",
