--- a/package.json
+++ b/package.json
@@ -8,18 +8,30 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.34",
+    "@types/react-select": "^3.0.16",
     "@types/styled-components": "^5.1.2",
     "@unform/core": "^2.1.3",
     "@unform/web": "^2.1.3",
+    "axios": "^0.19.2",
+    "emotion": "^10.0.27",
     "next": "9.5.1",
     "next-images": "^1.4.1",
+    "polished": "^3.6.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "styled-components": "^5.1.1"
+    "react-icons": "^3.10.0",
+    "react-select": "^3.1.0",
+    "react-toastify": "^6.0.8",
+    "styled-components": "^5.1.1",
+    "uuidv4": "^6.2.2",
+    "yup": "^0.29.3"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/node": "^14.0.27",
     "@types/react": "^16.9.44",
+    "@types/yup": "^0.29.4",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
     "@typescript-eslint/parser": "^2.28.0",
     "babel-plugin-styled-components": "^1.11.1",
