--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
+    "build": "next build && next export && vercel",
     "start": "next start"
   },
   "dependencies": {
@@ -22,6 +22,7 @@
     "react-dom": "16.13.1",
     "react-icons": "^3.10.0",
     "react-select": "^3.1.0",
+    "react-switch": "^5.0.1",
     "react-toastify": "^6.0.8",
     "styled-components": "^5.1.1",
     "uuidv4": "^6.2.2",
